--- a/TryoutCOMWMIProv/TryoutCOMWMIProv.vcxproj
+++ b/TryoutCOMWMIProv/TryoutCOMWMIProv.vcxproj
@@ -124,13 +124,14 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;TRYOUTCOMWMIPROV_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -141,12 +142,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="sample.h" />
+    <ClInclude Include="BaseTypes.h" />
+    <ClInclude Include="BasicCmdlineParser.h" />
+    <ClInclude Include="CmdLoader.h" />
+    <ClInclude Include="communication.h" />
+    <ClInclude Include="core.h" />
+    <ClInclude Include="FunctionMapper.h" />
+    <ClInclude Include="wmicontroller.h" />
+    <ClInclude Include="output.h" />
+    <ClInclude Include="Provider.h" />
+    <ClInclude Include="StringUtilities.h" />
+    <ClInclude Include="Sultan.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BasicCmdlineParser.c" />
     <ClCompile Include="classfac.cpp" />
+    <ClCompile Include="CmdLoader.c" />
+    <ClCompile Include="communication.c" />
+    <ClCompile Include="core.c" />
+    <ClCompile Include="FunctionMapper.c" />
     <ClCompile Include="instpro.cpp" />
+    <ClCompile Include="wmicontroller.c" />
     <ClCompile Include="maindll.cpp" />
+    <ClCompile Include="output.c" />
+    <ClCompile Include="StringUtilities.c" />
+    <ClCompile Include="Sultan.c" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
