--- a/TryoutCOMWMIProv/TryoutCOMWMIProv.vcxproj.filters
+++ b/TryoutCOMWMIProv/TryoutCOMWMIProv.vcxproj.filters
@@ -13,24 +13,123 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Provider">
+      <UniqueIdentifier>{2568e4fb-6d16-4c69-b538-093fb7fd72da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\CommandParser">
+      <UniqueIdentifier>{6a3d3531-7391-4b4b-bc47-bc2e26f8b5a0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Provider">
+      <UniqueIdentifier>{78fdd99b-50f8-4d4e-b850-52798b97ef3f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\CommandParser">
+      <UniqueIdentifier>{5a3b6dcf-dfc8-45b3-bacc-33f5e0ce3dff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\WMIController">
+      <UniqueIdentifier>{f7bfc8e3-6ccc-4df3-bb6c-2df5b35924d6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\WMIController">
+      <UniqueIdentifier>{b2a73dcb-845a-465b-a6bf-02c6eedd3e8b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\CMDController">
+      <UniqueIdentifier>{585a4a37-cec0-4e08-b247-941b0fdad8d7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\CMDController">
+      <UniqueIdentifier>{f245212f-cf4f-4d0a-b4f2-fc30ab3e9f70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Core">
+      <UniqueIdentifier>{7b737dac-46f9-49ba-bbe5-d8699308d04d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Core">
+      <UniqueIdentifier>{cacc7c57-2ba9-4681-bb98-a78856468683}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Communication">
+      <UniqueIdentifier>{8fe97d6e-0184-465f-b917-927fa5e676d7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Communication">
+      <UniqueIdentifier>{9cd73d07-9631-4574-99b0-a0ec392cdf2b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Utils">
+      <UniqueIdentifier>{6782d276-cb90-4604-9a79-f4122969cef0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Utils">
+      <UniqueIdentifier>{3522b958-6874-46e2-8dcb-3beaf827a202}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sample.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="instpro.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="utils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="classfac.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Provider</Filter>
     </ClCompile>
     <ClCompile Include="maindll.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Provider</Filter>
     </ClCompile>
+    <ClCompile Include="instpro.cpp">
+      <Filter>Source Files\Provider</Filter>
+    </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>Source Files\Provider</Filter>
+    </ClCompile>
+    <ClCompile Include="BasicCmdlineParser.c">
+      <Filter>Source Files\CommandParser</Filter>
+    </ClCompile>
+    <ClCompile Include="FunctionMapper.c">
+      <Filter>Source Files\CommandParser</Filter>
+    </ClCompile>
+    <ClCompile Include="output.c">
+      <Filter>Source Files\CommandParser</Filter>
+    </ClCompile>
+    <ClCompile Include="Sultan.c">
+      <Filter>Source Files\CommandParser</Filter>
+    </ClCompile>
+    <ClCompile Include="wmicontroller.c">
+      <Filter>Source Files\WMIController</Filter>
+    </ClCompile>
+    <ClCompile Include="CmdLoader.c">
+      <Filter>Source Files\CMDController</Filter>
+    </ClCompile>
+    <ClCompile Include="core.c">
+      <Filter>Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="communication.c">
+      <Filter>Source Files\Communication</Filter>
+    </ClCompile>
+    <ClCompile Include="StringUtilities.c">
+      <Filter>Source Files\Utils</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Provider.h">
+      <Filter>Header Files\Provider</Filter>
+    </ClInclude>
+    <ClInclude Include="BasicCmdlineParser.h">
+      <Filter>Header Files\CommandParser</Filter>
+    </ClInclude>
+    <ClInclude Include="FunctionMapper.h">
+      <Filter>Header Files\CommandParser</Filter>
+    </ClInclude>
+    <ClInclude Include="output.h">
+      <Filter>Header Files\CommandParser</Filter>
+    </ClInclude>
+    <ClInclude Include="Sultan.h">
+      <Filter>Header Files\CommandParser</Filter>
+    </ClInclude>
+    <ClInclude Include="wmicontroller.h">
+      <Filter>Header Files\WMIController</Filter>
+    </ClInclude>
+    <ClInclude Include="CmdLoader.h">
+      <Filter>Header Files\CMDController</Filter>
+    </ClInclude>
+    <ClInclude Include="core.h">
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="communication.h">
+      <Filter>Header Files\Communication</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseTypes.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="StringUtilities.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
