--- a/TryoutCOMWMIProv/TryoutCOMWMIProv.vcxproj.filters
+++ b/TryoutCOMWMIProv/TryoutCOMWMIProv.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="StringUtilities.c">
       <Filter>Source Files\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Logger.c">
+      <Filter>Source Files\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Provider.h">
@@ -130,6 +133,9 @@
     </ClInclude>
     <ClInclude Include="StringUtilities.h">
       <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger.h">
+      <Filter>Header Files\Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
